--- a/templates/layout/map.html.twig
+++ b/templates/layout/map.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}SIM{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block stylesheets %}
             <link href="{{ asset('assets/css/global.css') }}" rel="stylesheet">
             <link href="{{ asset('assets/css/menu.css') }}" rel="stylesheet">
