test of fullscreen site of iphone

--- a/templates/layout/map.html.twig
+++ b/templates/layout/map.html.twig
@@ -10,7 +10,7 @@
             <link href="{{ asset('assets/css/map.css') }}" rel="stylesheet">
             
             <link rel="stylesheet" href="https://use.typekit.net/kjj6fvl.css">
-            
+            <meta name="apple-mobile-web-app-capable" content="yes">
         {% endblock %}
 
         {% block javascripts %}
