--- a/templates/layout/account.html.twig
+++ b/templates/layout/account.html.twig
@@ -7,6 +7,7 @@
             <link href="{{ asset('assets/css/global.css') }}" rel="stylesheet">
             <link href=" {{ asset('assets/css/login.css') }}" rel="stylesheet">
             <link rel="stylesheet" href="https://use.typekit.net/kjj6fvl.css">
+            <meta name="apple-mobile-web-app-capable" content="yes">
         {% endblock %}
 
         {% block javascripts %}
