--- a/templates/camera/index.html.twig
+++ b/templates/camera/index.html.twig
@@ -21,4 +21,9 @@
         <div id="camera__output">
             <img id="photo" alt="The screen capture will appear in this box."> 
         </div>
+        <div class="bg">
+        </div>
+        <div class="camera_bg">
+            <video id="video_bg" playsinline>Video stream not available.</video>
+        </div>
 {% endblock %}
