--- a/templates/layout/camera.html.twig
+++ b/templates/layout/camera.html.twig
@@ -17,7 +17,7 @@
             <script src="{{ asset('assets/js/camera.js') }}" defer></script>
         {% endblock %}
     </head>
-    <body>
+    <body id="camera">
         {% block main %}{% endblock %}
         {% include '/_partial/menu/bottomMenu.html.twig' %}
     </body>
