--- a/public/assets/css/camera.css
+++ b/public/assets/css/camera.css
@@ -1,3 +1,6 @@
+body {
+    overflow: hidden;
+}
 canvas {
     display: none;
 }
@@ -10,12 +13,15 @@ img {
     max-width: 100%;
 }
 .camera {
-    height: calc(100vh - 75px);
-    background: rgba(50, 50, 50, 0.6);
-    margin-bottom: 75px;
+    position: fixed;
+    z-index: 4;
+    bottom: 55px;
 }
 .camera__controls {
     display: flex;
+    position: absolute;
+    bottom: 30px;
+    width: 100vw;
 }
 #camera__takaPicture {
     height: 65px;
@@ -48,4 +54,16 @@ img {
     width: 100vw;
     height: calc(100vh - 150px);
     display: none;
+}
+
+.camera_bg {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: 1;
+}
+.camera_bg video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
