--- a/templates/camera/index.html.twig
+++ b/templates/camera/index.html.twig
@@ -19,6 +19,10 @@
         </div>
         <canvas id="canvas"></canvas>
         <div id="camera__output">
+            <div class="camera__outputMenu">
+                <span class="cancel">{{ 'camera.cancel'|trans }}</span>
+                <span class="publish">{{ 'camera.publish'|trans }}</span>
+            </div>
             <img id="photo" alt="The screen capture will appear in this box."> 
         </div>
         <div class="bg">
